--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ allprojects {
 
 sonar {
     properties {
-        property "sonar.projectName", "Example of Sonar Scanner for Gradle - Multimodule"
-        property "sonar.projectKey", "org.sonarqube:gradle-multimodule"
+        property "sonar.projectName", "Multimodule"
+        property "sonar.projectKey", "multimodule"
     }
 }
 
